fix: images in the news drawer being stretched

--- a/src/styles/markdown.module.css
+++ b/src/styles/markdown.module.css
@@ -7,5 +7,4 @@
 
 .markdown-image > img {
 	display: block;
-	height: 100%;
 }
